tests-e2e/tests/snapshots/cli__config_missing_source_program_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:30
  •
  │
  • missing field `program`
  │
  │   {"sources":{"kind":"command"}}
  │                                ╰
  •
