tests-e2e/tests/snapshots/cli__config_multiline_eof_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:3:14
  •
  │
  • EOF while parsing a value
  │
  │       "onSave":
  │                ╰
  •
