tests-e2e/tests/snapshots/cli__config_multiline_eof_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:3:14
  •
  │
  • EOF while parsing a value
  │
  │       "onSave":
  │                ╰
  •
