tests-e2e/tests/snapshots/cli__config_multiline_invalid_arguments_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:3:24
  •
  │
  • invalid type: integer `12`, expected a string
  │
  │       "arguments": ["λ", 12, "sources"],
  │                          ╰─
  •
