tests-e2e/tests/snapshots/cli__config_multiline_program_before_arguments_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:4:16
  •
  │
  • source command program must not be empty or whitespace-only
  │
  │       "program": " ",
  │                  ╰──
  •
