tests-e2e/tests/snapshots/cli__config_multiline_unicode_unknown_key_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:3:18
  •
  │
  • unknown field `λ`, expected one of `onOpen`, `onSave`, `onChange`
  │
  │       "diagnostics": {"λ": true}
  │                       ╰──
  •
